{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 503,
  "lineage": "83400746-fe6a-70f0-9a56-99c822d86b48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3080444a2a3a40",
            "arn": "arn:aws:ec2:eu-central-1:720830544726:elastic-ip/eipalloc-0ef3080444a2a3a40",
            "association_id": "eipassoc-04c370e891ed54502",
            "domain": "vpc",
            "id": "eipalloc-0ef3080444a2a3a40",
            "instance": "i-0552f8f98da38b074",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0249a09d84b402da4",
            "private_dns": "ip-10-0-1-97.eu-central-1.compute.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-18-184-71-176.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.71.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "crypto-exchange-eip"
            },
            "tags_all": {
              "Name": "crypto-exchange-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.user_data_logs",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b3423ac312907508",
            "arn": "arn:aws:ec2:eu-central-1:720830544726:instance/i-0552f8f98da38b074",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "crypto-exchange-ec2-profile",
            "id": "i-0552f8f98da38b074",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0249a09d84b402da4",
            "private_dns": "ip-10-0-1-97.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-63-176-165-157.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.176.165.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-central-1:720830544726:key/85770775-091a-4684-8704-ab942b4c2600",
                "throughput": 125,
                "volume_id": "vol-00e0148a0a547ae1f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fa0163dbd7c72ad",
            "tags": {
              "Name": "crypto-exchange-app"
            },
            "tags_all": {
              "Name": "crypto-exchange-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c02903d61e1fe0b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudwatch_log_group.user_data_logs",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:720830544726:internet-gateway/igw-06ab2f4265a34eb26",
            "id": "igw-06ab2f4265a34eb26",
            "owner_id": "720830544726",
            "tags": {
              "Name": "crypto-exchange-igw"
            },
            "tags_all": {
              "Name": "crypto-exchange-igw"
            },
            "vpc_id": "vpc-0e84168438dbeae08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:720830544726:route-table/rtb-00ca248a376da1db6",
            "id": "rtb-00ca248a376da1db6",
            "owner_id": "720830544726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ab2f4265a34eb26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crypto-exchange-public-rt"
            },
            "tags_all": {
              "Name": "crypto-exchange-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e84168438dbeae08"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01791545de3822454",
            "route_table_id": "rtb-00ca248a376da1db6",
            "subnet_id": "subnet-06fa0163dbd7c72ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:720830544726:security-group/sg-07c02903d61e1fe0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c02903d61e1fe0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Next.js",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Status page",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "crypto-exchange-20251107061651329100000002",
            "name_prefix": "crypto-exchange-",
            "owner_id": "720830544726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "crypto-exchange-sg"
            },
            "tags_all": {
              "Name": "crypto-exchange-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e84168438dbeae08"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:720830544726:subnet/subnet-06fa0163dbd7c72ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa0163dbd7c72ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "720830544726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crypto-exchange-public-subnet"
            },
            "tags_all": {
              "Name": "crypto-exchange-public-subnet"
            },
            "vpc_id": "vpc-0e84168438dbeae08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:720830544726:vpc/vpc-0e84168438dbeae08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061ce9bab0105c971",
            "default_route_table_id": "rtb-0f16f4d08341f7f52",
            "default_security_group_id": "sg-07a42c3605c78ed33",
            "dhcp_options_id": "dopt-0b163b3045769905a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e84168438dbeae08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f16f4d08341f7f52",
            "owner_id": "720830544726",
            "tags": {
              "Name": "crypto-exchange-vpc"
            },
            "tags_all": {
              "Name": "crypto-exchange-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}